2012-03-31  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_show_image_stream, avt_import_image_stream):
	fix: couldn't load anything but XPM

2012-03-19  Andreas K. Foerster  <info@akfoerster.de>

	* avtterm.c (set_foreground_color, set_background_color):
	improve colors

	* pascal/akfavatar.pas (TextColor, TextBackground):
	improve colors

2012-02-25  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_pager): support markup mode

2012-02-13  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_wait): use SDL_Delay() for short times
	akfavatar.h, avatar.c: remove avt_delay()
	lua/lua-avt.c: adapted

2012-02-11  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar.c (avt_mb_decode, avt_mb_decode_buffer)
	(avt_mb_encode, avt_mb_encode_buffer, avt_recode, avt_recode_bffer):
	use size_t
	avtterm.c, lua/lua-avt.c: adapted

	* pascal/multiply.pas:
	cannot be compiled without AKFAvatar anymore (simplified)

2012-02-10  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar.c, avatar-audio:
	use size_t where appropriete (ABI change!)
	pascal/akfavatar.pas: adapted

2012-01-31  Andreas K. Foerster  <info@akfoerster.de>

	* avtmsg.c, avtgrmsg.c, mingw/avtmsg.c: removed
	all callers adapted

	* example.c: simplified

2012-01-28  Andreas K. Foerster  <info@akfoerster.de>

	* avatar-audio.c (avt_load_au): code cleanup

2012-01-06  Andreas K. Foerster  <info@akfoerster.de>

	* Homepage.desktop: new file

2012-01-05  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar-audio.c (avt_load_audio_part): new function
	avatar-audio.c (avt_LoadAU_RW, avt_load_audio_RW)
	(avt_load_audio_stream, avt_load_audio_data): adapted
	lua/lua-avt.c (lavt_load_audio_stream): adapted

	* akfavatar.h:
	avt_image_t renamed to avt_image
	avt_audio_t renamed to avt_audio
	all c-code adapted

	* avtaddons.h: avt_filter_t renamed to avt_filter
	all c-code adapted

2012-01-04  Andreas K. Foerster  <info@akfoerster.de>
